--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
 body {
-  background-color: antiquewhite;
+  background-color: rgb(227, 188, 137);
+}
+h1 {
+  font-size: 100px;
+  color: blueviolet;
 }
