--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -5,13 +5,13 @@ body {
 'Rubik', sans-serif;*/
 
 h1 {
-  font: "Rubik", sans-serif;
-  font-size: 100px;
+  font: "Poppins", sans-serif;
+  font-weight: normal;
   color: rgb(125, 121, 121);
 }
 
 p {
-  font-family: "Poppins", sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: normal;
   color: brown;
 }
