--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -6,12 +6,13 @@
 
 h1,
 h2 {
+  text-align: center;
   font: "Rubik", sans-serif;
   font-weight: normal;
   color: rgb(125, 121, 121);
 }
 h1 {
-  font-size: 40px;
+  font-size: 36px;
 }
 h2 {
   font-size: 20px;
@@ -21,6 +22,7 @@ p {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
   font-size: smaller;
+  text-align: justify;
   color: brown;
 }
 .container {
