--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,5 +1,5 @@
-.hero {
-  background-color: rgb(238, 203, 158);
+body {
+  background-color: rgb(234, 161, 66);
 }
 /*font-family: 'Poppins', sans-serif;
 'Rubik', sans-serif;*/
@@ -9,7 +9,7 @@ h2 {
   text-align: center;
   font: "Rubik", sans-serif;
   font-weight: normal;
-  color: rgb(125, 121, 121);
+  color: rgb(66, 63, 63);
 }
 h1 {
   font-size: 36px;
@@ -23,9 +23,9 @@ p {
   font-weight: normal;
   font-size: smaller;
   text-align: justify;
-  color: brown;
+  color: rgb(143, 97, 18);
 }
 .container {
   padding: 20px;
-  margin: 20px auto;
+  margin: 30px auto;
 }
