--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -39,3 +39,9 @@ p {
   background-color: rgba(143, 97, 18, 0.46);
 }
 
+footer {
+  text-align: center;
+  font-size: 10px;
+  margin-top: 50px;
+  padding: 40px;
+}
