--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -5,17 +5,16 @@ body {
 'Rubik', sans-serif;*/
 
 h1,
-h2 {
+h2,
+h3 {
   text-align: center;
   font: "Rubik", sans-serif;
   font-weight: normal;
   color: rgb(66, 63, 63);
+  font-size: 20px;
 }
 h1 {
   font-size: 36px;
-}
-h2 {
-  font-size: 20px;
 }
 
 p {
@@ -49,6 +48,10 @@ p {
   font-size: 14px;
   padding: 3px 10px;
 }
+
+.btn-branding-outline {
+  color: black;
+}
 footer {
   text-align: center;
   font-size: 10px;
@@ -62,6 +65,6 @@ footer {
 
 .about-section {
   text-align: center;
-  padding: 20px;
-  margin-top: 50px;
+  padding: 10px;
+  margin-top: 80px;
 }
