--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -4,8 +4,20 @@ body {
 /*font-family: 'Poppins', sans-serif;
 'Rubik', sans-serif;*/
 
-h1,
-h2,
+h1 {
+  text-align: center;
+  font: "Rubik", sans-serif;
+  font-weight: normal;
+  color: rgb(66, 63, 63);
+  font-size: 36px;
+}
+h2 {
+  text-align: center;
+  font: "Rubik", sans-serif;
+  font-weight: normal;
+  color: rgb(66, 63, 63);
+  font-size: 18px;
+}
 h3 {
   text-align: center;
   font: "Rubik", sans-serif;
@@ -13,15 +25,13 @@ h3 {
   color: rgb(66, 63, 63);
   font-size: 20px;
 }
-h1 {
-  font-size: 36px;
-}
 
 p {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
   font-size: smaller;
   text-align: justify;
+  margin: 0 auto;
   padding: 10px;
   color: rgb(143, 97, 18);
 }
@@ -50,7 +60,10 @@ p {
 }
 
 .btn-branding-outline {
-  color: black;
+  color: rgb(66, 63, 63);
+  text-align: center;
+  padding: 10px;
+  margin: 0 auto;
 }
 footer {
   text-align: center;
