--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -21,9 +21,9 @@ h2 {
 h3 {
   text-align: center;
   font: "Rubik", sans-serif;
+  font-size: medium;
   font-weight: normal;
   color: rgb(66, 63, 63);
-  font-size: 20px;
 }
 
 p {
